[tool.poetry]
name = "draw-chart-py"
version = "0.1.0"
description = ""
authors = ["Kazuki Takahashi <kazutak@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
notebook = "^6.5.4"
matplotlib = "^3.7.1"
pandas = "^2.0.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
